--- a/Deep_Learning/Kadenze Course/Session 0.ipynb
+++ b/Deep_Learning/Kadenze Course/Session 0.ipynb
@@ -370,162 +370,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "DLL load failed: The specified module could not be found.",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'PIL'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-720afedd56b7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPIL\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\PIL\\Image.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     56\u001b[0m     \u001b[1;31m# Also note that Image.core is not a publicly documented interface,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m     \u001b[1;31m# and should be considered private and subject to change.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m     \u001b[1;32mfrom\u001b[0m \u001b[1;33m.\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0m_imaging\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mcore\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mPILLOW_VERSION\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcore\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'PILLOW_VERSION'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     60\u001b[0m         raise ImportError(\"The _imaging extension was built for another \"\n",
-      "\u001b[1;31mImportError\u001b[0m: DLL load failed: The specified module could not be found."
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-15-0f6709e38f49>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mPIL\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'PIL'"
      ]
     }
    ],
    "source": [
-    "import PIL\n",
     "from PIL import Image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on package PIL:\n",
-      "\n",
-      "NAME\n",
-      "    PIL\n",
-      "\n",
-      "DESCRIPTION\n",
-      "    # The Python Imaging Library.\n",
-      "    # $Id$\n",
-      "    #\n",
-      "    # package placeholder\n",
-      "    #\n",
-      "    # Copyright (c) 1999 by Secret Labs AB.\n",
-      "    #\n",
-      "    # See the README file for information on usage and redistribution.\n",
-      "    #\n",
-      "\n",
-      "PACKAGE CONTENTS\n",
-      "    BdfFontFile\n",
-      "    BmpImagePlugin\n",
-      "    BufrStubImagePlugin\n",
-      "    ContainerIO\n",
-      "    CurImagePlugin\n",
-      "    DcxImagePlugin\n",
-      "    DdsImagePlugin\n",
-      "    EpsImagePlugin\n",
-      "    ExifTags\n",
-      "    FitsStubImagePlugin\n",
-      "    FliImagePlugin\n",
-      "    FontFile\n",
-      "    FpxImagePlugin\n",
-      "    FtexImagePlugin\n",
-      "    GbrImagePlugin\n",
-      "    GdImageFile\n",
-      "    GifImagePlugin\n",
-      "    GimpGradientFile\n",
-      "    GimpPaletteFile\n",
-      "    GribStubImagePlugin\n",
-      "    Hdf5StubImagePlugin\n",
-      "    IcnsImagePlugin\n",
-      "    IcoImagePlugin\n",
-      "    ImImagePlugin\n",
-      "    Image\n",
-      "    ImageChops\n",
-      "    ImageCms\n",
-      "    ImageColor\n",
-      "    ImageDraw\n",
-      "    ImageDraw2\n",
-      "    ImageEnhance\n",
-      "    ImageFile\n",
-      "    ImageFilter\n",
-      "    ImageFont\n",
-      "    ImageGrab\n",
-      "    ImageMath\n",
-      "    ImageMode\n",
-      "    ImageMorph\n",
-      "    ImageOps\n",
-      "    ImagePalette\n",
-      "    ImagePath\n",
-      "    ImageQt\n",
-      "    ImageSequence\n",
-      "    ImageShow\n",
-      "    ImageStat\n",
-      "    ImageTk\n",
-      "    ImageTransform\n",
-      "    ImageWin\n",
-      "    ImtImagePlugin\n",
-      "    IptcImagePlugin\n",
-      "    Jpeg2KImagePlugin\n",
-      "    JpegImagePlugin\n",
-      "    JpegPresets\n",
-      "    McIdasImagePlugin\n",
-      "    MicImagePlugin\n",
-      "    MpegImagePlugin\n",
-      "    MpoImagePlugin\n",
-      "    MspImagePlugin\n",
-      "    OleFileIO\n",
-      "    PSDraw\n",
-      "    PaletteFile\n",
-      "    PalmImagePlugin\n",
-      "    PcdImagePlugin\n",
-      "    PcfFontFile\n",
-      "    PcxImagePlugin\n",
-      "    PdfImagePlugin\n",
-      "    PixarImagePlugin\n",
-      "    PngImagePlugin\n",
-      "    PpmImagePlugin\n",
-      "    PsdImagePlugin\n",
-      "    PyAccess\n",
-      "    SgiImagePlugin\n",
-      "    SpiderImagePlugin\n",
-      "    SunImagePlugin\n",
-      "    TarIO\n",
-      "    TgaImagePlugin\n",
-      "    TiffImagePlugin\n",
-      "    TiffTags\n",
-      "    WalImageFile\n",
-      "    WebPImagePlugin\n",
-      "    WmfImagePlugin\n",
-      "    XVThumbImagePlugin\n",
-      "    XbmImagePlugin\n",
-      "    XpmImagePlugin\n",
-      "    _binary\n",
-      "    _imaging\n",
-      "    _imagingft\n",
-      "    _imagingmath\n",
-      "    _imagingmorph\n",
-      "    _imagingtk\n",
-      "    _tkinter_finder\n",
-      "    _util\n",
-      "    features\n",
-      "    version\n",
-      "\n",
-      "DATA\n",
-      "    PILLOW_VERSION = '5.0.0'\n",
-      "    VERSION = '1.1.7'\n",
-      "\n",
-      "VERSION\n",
-      "    5.0.0\n",
-      "\n",
-      "FILE\n",
-      "    c:\\users\\karti\\anaconda3\\lib\\site-packages\\pil\\__init__.py\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
