--- a/K - Nearest Neighbors/KNN Implementation.ipynb
+++ b/K - Nearest Neighbors/KNN Implementation.ipynb
@@ -380,14 +380,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Algorithm Commencement"
+    "## Self KNN Implementation"
    ]
   },
   {
@@ -573,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -594,11 +590,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## KNN Implementation using Scikit-Learn"
+   ]
   },
   {
    "cell_type": "code",
